// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getIndemnite 2k, 2ans d'ancienneté, groupe IV should return 1200 1`] = `
Object {
  "formula": "\\\\frac3{10} \\\\times Sref \\\\times \\"ancienneté\\"",
  "labels": Object {
    "Ancienneté (en année entière)": 2,
    "Ancienneté totale": 2,
    "Groupe": "IV",
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 2ans d'ancienneté, groupe V should return 1600 1`] = `
Object {
  "formula": "\\\\frac25 \\\\times Sref \\\\times \\"ancienneté\\"",
  "labels": Object {
    "Ancienneté (en année entière)": 2,
    "Ancienneté totale": 2,
    "Groupe": "V",
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 5ans d'ancienneté, 51ans should return 5000 1`] = `
Object {
  "formula": "\\\\frac3{10} \\\\times Sref \\\\times \\"ancienneté\\"  + Sref",
  "labels": Object {
    "Age": 51,
    "Ancienneté (en année entière)": 5,
    "Ancienneté totale": 5,
    "Groupe": "I",
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 5ans d'ancienneté, 51ans, licenciement eco, OPE should return 7000 1`] = `
Object {
  "formula": "\\\\frac3{10} \\\\times Sref \\\\times \\"ancienneté\\"  + Sref \\\\times 2",
  "labels": Object {
    "Age": 51,
    "Ancienneté (en année entière)": 5,
    "Ancienneté totale": 5,
    "Groupe": "I",
    "Salaire de référence (Sref)": 2000,
    "affiliation à une OPE": "oui",
    "licenciement économique": "oui",
  },
}
`;

exports[`getIndemnite 2k, 5ans d'ancienneté, 55ans should return 7000 1`] = `
Object {
  "formula": "\\\\frac3{10} \\\\times Sref \\\\times \\"ancienneté\\"  + Sref \\\\times 2",
  "labels": Object {
    "Age": 55,
    "Ancienneté (en année entière)": 5,
    "Ancienneté totale": 5,
    "Groupe": "I",
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 10ans d'ancienneté, 51ans, groupe IV should return 10000 1`] = `
Object {
  "formula": "\\\\frac4{10} \\\\times Sref \\\\times \\"ancienneté\\"+ Sref",
  "labels": Object {
    "Age": 51,
    "Ancienneté (en année entière)": 10,
    "Ancienneté totale": 10,
    "Groupe": "IV",
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 10ans d'ancienneté, 51ans, groupe V should return 14000 1`] = `
Object {
  "formula": "\\\\frac35 \\\\times Sref \\\\times \\"ancienneté\\" + Sref",
  "labels": Object {
    "Age": 51,
    "Ancienneté (en année entière)": 10,
    "Ancienneté totale": 10,
    "Groupe": "V",
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 10ans d'ancienneté, groupe IV should return 8000 1`] = `
Object {
  "formula": "\\\\frac4{10} \\\\times Sref \\\\times \\"ancienneté\\"",
  "labels": Object {
    "Ancienneté (en année entière)": 10,
    "Ancienneté totale": 10,
    "Groupe": "IV",
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 10ans d'ancienneté, groupe V should return 12000 1`] = `
Object {
  "formula": "\\\\frac35 \\\\times Sref \\\\times \\"ancienneté\\"",
  "labels": Object {
    "Ancienneté (en année entière)": 10,
    "Ancienneté totale": 10,
    "Groupe": "V",
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 10ans, 51ans, groupe IV, licenciement eco, OPE should return 12000 1`] = `
Object {
  "formula": "\\\\frac4{10} \\\\times Sref \\\\times \\"ancienneté\\"+ Sref\\\\times 2",
  "labels": Object {
    "Age": 51,
    "Ancienneté (en année entière)": 10,
    "Ancienneté totale": 10,
    "Groupe": "IV",
    "Salaire de référence (Sref)": 2000,
    "affiliation à une OPE": "oui",
    "licenciement économique": "oui",
  },
}
`;

exports[`getIndemnite 2k, 10ans, 51ans, groupe V, licenciement eco, OPE should return 16000 1`] = `
Object {
  "formula": "\\\\frac35 \\\\times Sref \\\\times \\"ancienneté\\" + Sref\\\\times 2",
  "labels": Object {
    "Age": 51,
    "Ancienneté (en année entière)": 10,
    "Ancienneté totale": 10,
    "Groupe": "V",
    "Salaire de référence (Sref)": 2000,
    "affiliation à une OPE": "oui",
    "licenciement économique": "oui",
  },
}
`;

exports[`getIndemnite 2k, 12mois d'ancienneté should return 500 1`] = `
Object {
  "formula": "-",
  "labels": Object {
    "Ancienneté (en année entière)": 1,
    "Ancienneté totale": 1,
    "Groupe": "I",
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 12mois d'ancienneté, OPE + licenciement eco should return 2000 1`] = `
Object {
  "formula": "Sref",
  "labels": Object {
    "Ancienneté (en année entière)": 1,
    "Ancienneté totale": 1,
    "Groupe": "I",
    "Salaire de référence (Sref)": 2000,
    "affiliation à une OPE": "oui",
    "licenciement économique": "oui",
  },
}
`;

exports[`getIndemnite 2k, 12mois d'ancienneté, groupe IV should return 500 1`] = `
Object {
  "formula": "-",
  "labels": Object {
    "Ancienneté (en année entière)": 1,
    "Ancienneté totale": 1,
    "Groupe": "IV",
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 12mois d'ancienneté, groupe IV, OPE + licenciement eco should return 2000 1`] = `
Object {
  "formula": "Sref",
  "labels": Object {
    "Ancienneté (en année entière)": 1,
    "Ancienneté totale": 1,
    "Groupe": "IV",
    "Salaire de référence (Sref)": 2000,
    "affiliation à une OPE": "oui",
    "licenciement économique": "oui",
  },
}
`;

exports[`getIndemnite 2k, 12mois d'ancienneté, groupe V should return 500 1`] = `
Object {
  "formula": "-",
  "labels": Object {
    "Ancienneté (en année entière)": 1,
    "Ancienneté totale": 1,
    "Groupe": "V",
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 12mois d'ancienneté, groupe V, OPE + licenciement eco should return 2000 1`] = `
Object {
  "formula": "Sref",
  "labels": Object {
    "Ancienneté (en année entière)": 1,
    "Ancienneté totale": 1,
    "Groupe": "V",
    "Salaire de référence (Sref)": 2000,
    "affiliation à une OPE": "oui",
    "licenciement économique": "oui",
  },
}
`;

exports[`getIndemnite 2k, 20ans d'ancienneté, 51ans, groupe IV should return 22000 1`] = `
Object {
  "formula": "\\\\frac5{10} \\\\times  Sref \\\\times \\"ancienneté\\"+ Sref",
  "labels": Object {
    "Age": 51,
    "Ancienneté (en année entière)": 20,
    "Ancienneté totale": 20,
    "Groupe": "IV",
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 20ans d'ancienneté, 51ans, groupe IV, licenciement eco, OPE should return 24000 1`] = `
Object {
  "formula": "\\\\frac5{10} \\\\times  Sref \\\\times \\"ancienneté\\"+ Sref\\\\times 2",
  "labels": Object {
    "Age": 51,
    "Ancienneté (en année entière)": 20,
    "Ancienneté totale": 20,
    "Groupe": "IV",
    "Salaire de référence (Sref)": 2000,
    "affiliation à une OPE": "oui",
    "licenciement économique": "oui",
  },
}
`;

exports[`getIndemnite 2k, 20ans d'ancienneté, 51ans, groupe V should return 34000 1`] = `
Object {
  "formula": "\\\\frac45 \\\\times Sref \\\\times \\"ancienneté\\" + Sref",
  "labels": Object {
    "Age": 51,
    "Ancienneté (en année entière)": 20,
    "Ancienneté totale": 20,
    "Groupe": "V",
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 20ans d'ancienneté, 51ans, groupe V, licenciement eco, OPE should return 36000 1`] = `
Object {
  "formula": "\\\\frac45 \\\\times Sref \\\\times \\"ancienneté\\" + Sref\\\\times 2",
  "labels": Object {
    "Age": 51,
    "Ancienneté (en année entière)": 20,
    "Ancienneté totale": 20,
    "Groupe": "V",
    "Salaire de référence (Sref)": 2000,
    "affiliation à une OPE": "oui",
    "licenciement économique": "oui",
  },
}
`;

exports[`getIndemnite 2k, 20ans d'ancienneté, groupe IV should return 20000 1`] = `
Object {
  "formula": "\\\\frac5{10} \\\\times  Sref \\\\times \\"ancienneté\\"",
  "labels": Object {
    "Ancienneté (en année entière)": 20,
    "Ancienneté totale": 20,
    "Groupe": "IV",
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 20ans d'ancienneté, groupe V should return 32000 1`] = `
Object {
  "formula": "\\\\frac45 \\\\times Sref \\\\times \\"ancienneté\\"",
  "labels": Object {
    "Ancienneté (en année entière)": 20,
    "Ancienneté totale": 20,
    "Groupe": "V",
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 23ans d'ancienneté, 55ans, groupe V, licenciement eco, OPE should return 40000 1`] = `
Object {
  "formula": "Sref \\\\times 20",
  "labels": Object {
    "Age": 55,
    "Ancienneté (en année entière)": 23,
    "Ancienneté totale": 23,
    "Groupe": "V",
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 30mois d'ancienneté should return 1500 1`] = `
Object {
  "formula": "\\\\frac3{10} \\\\times Sref \\\\times \\"ancienneté\\" ",
  "labels": Object {
    "Ancienneté (en année entière)": 2,
    "Ancienneté totale": 2.5,
    "Groupe": "I",
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 33ans d'ancienneté, 55ans, groupe IV, licenciement eco, OPE should return 36000 1`] = `
Object {
  "formula": "Sref \\\\times 18",
  "labels": Object {
    "Age": 55,
    "Ancienneté (en année entière)": 33,
    "Ancienneté totale": 33,
    "Groupe": "IV",
    "Salaire de référence (Sref)": 2000,
    "affiliation à une OPE": "oui",
    "licenciement économique": "oui",
  },
}
`;

exports[`getIndemnite 2k, 41ans d'ancienneté, 55ans should return 28000 1`] = `
Object {
  "formula": "Sref \\\\times 14",
  "labels": Object {
    "Age": 55,
    "Ancienneté (en année entière)": 41,
    "Ancienneté totale": 41,
    "Groupe": "I",
    "Salaire de référence (Sref)": 2000,
  },
}
`;
